// Protobuf Version
syntax = "proto3";

// Option
option go_package = "github.com/Rayato159/neversuitup-e-commerce-test";

message FindOneProdcutReq {
    string id = 1;
}

message Product {
    string id = 1;
    string title = 2;
    string description = 3;
    double price = 4;
}

// Methods
service ProductsServices {
    rpc FindOneProduct (stream FindOneProdcutReq) returns (Product) {}
}